--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
             </tr>
         </table>
     </head>
-
+    <nav>
+        <a href="#Educations">| Educations</a>
+        <a href="#My story">| My Story</a>
+        <a href="#Skills">| Skills</a>
+        <a href="#Hobby">| Hobby</a>
+        <a href="#Social Media">| Social Media</a>
+        <a href="#Contact">| Contact</a>
+    </nav>
     <br />
     <hr />
     <h1>Educations</h1>
@@ -68,9 +75,9 @@
     </section>
     <hr />
 
-    <section id="Progamming skill">
+    <section id="Skills">
         <table>
-            <h1>Programming Skill</h1>
+            <h1>Skills</h1>
             <tr>
                 <td>C</td>
                 <td>⭐️⭐⭐</td>
@@ -94,10 +101,10 @@
         </ul>
     </section>
     <hr />
-    <section id ="Social Media">
+    <section id="Social Media">
         <h2>Social Media</h2>
         <p>Instagram : anjelitakaminang</p>
-        <p>Facebook  : Anjelita Ferensca Kaminang</p>
+        <p>Facebook : Anjelita Ferensca Kaminang</p>
     </section>
     <hr />
     <section id="Contact">
@@ -119,7 +126,7 @@
             </form>
         </fieldset>
     </section>
-    
+
 </body>
 
 </html>
